--- a/Front/main.html
+++ b/Front/main.html
@@ -252,7 +252,9 @@
     <!-- analytics layout -->
     <main class="mdl-layout__content mdl-color--grey-100 " id="analytics-layout" style="display: none;">
       <div class="mdl-grid demo-content">
-        <div id="chartContainer" style="height: 300px; width: 100%;">
+        <div id="chartContainer_1" style="height: 300px; width: 100%;">
+        </div>
+        <div id="chartContainer_2" style="height: 300px; width: 100%;">
         </div>
       </div>
     </main>
