--- a/Front/main.html
+++ b/Front/main.html
@@ -134,9 +134,31 @@
             <button type="" style="width: 100px;" class="btn btn-primary" id="score_form_reset_button"
               onclick='document.forms["score_form"].reset()'>reset</button>
           </div>
-
-
         </form>
+
+
+        <form id="birthday_form">
+          <h3 style="text-align: center;">change birthday parameters</h3>
+          <div class="form-row">
+            <div class="form-group col">
+              <!-- <label for="birthday_off_input">score coefficient</label> -->
+              <input type="number" class="form-control" id="birthday_off_input" placeholder="birthday off"
+                min="0" max="1" step="0.05">
+            </div>
+
+            <div class="form-group col">
+              <!-- <label for="birthday_off_limit_input">score_period</label> -->
+              <input type="number" class="form-control" id="birthday_off_limit_input" placeholder="birthday off limit" min="0">
+            </div>
+          </div>
+          <div class="birthday_form_buttons">
+            <a href="#danger_alert"><button type="button" style="width: 100px;" class="btn btn-primary"
+                id="birthday_form_submit_button" onclick="submite_birthday_form()">submit</button></a>
+            <button type="" style="width: 100px;" class="btn btn-primary" id="birthday_form_reset_button"
+              onclick='document.forms["birthday_form"].reset()'>reset</button>
+          </div>
+        </form>
+
 
         <form id="add_rank_form">
           <h3 style="text-align: center;">add Rank</h3>
