Fix Charts view

--- a/Front/main.html
+++ b/Front/main.html
@@ -273,11 +273,11 @@
 
     <!-- analytics layout -->
     <main class="mdl-layout__content mdl-color--grey-100 " id="analytics-layout" style="display: none;">
-      <div class="mdl-grid demo-content">
-        <div id="chartContainer_1" style="height: 300px; width: 100%;">
+      <div class="mdl-grid demo-content" style="width: 100%;">
+        <div class="mdl-cell mdl-cell--6-col" id="chartContainer_1">
         </div>
-        <div id="chartContainer_2" style="height: 600px; width: 100%;">
-        </div>
+        
+        <div class="mdl-cell mdl-cell--6-col" id="chartContainer_2"></div>
       </div>
     </main>
 
